--- a/css/laptop.css
+++ b/css/laptop.css
@@ -27,7 +27,7 @@ section > .container{
 /* CSS phần banner */
 #banner{
     background-image: linear-gradient(rgba(34,34,34,0.6), rgba(34,34,34,0.6)),
-    url(../images/banner.jpg);
+    url(../images/banner1.jpg);
     background-size: cover;
     position: relative;
     height: 60vh;
